--- a/styles.css
+++ b/styles.css
@@ -1,89 +1,44 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
-select {
-  background-color: inherit;
-  font-family: "IBM Plex Mono", monospace;
-  color: #ffffff;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  border: none;
-  outline: none;
-  padding: none;
-  -webkit-appearance: none;
-  appearance: none;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-button {
-  background-color: #4e4e4e;
-  color: #b4b4b4;
-  padding: 0.8rem 2rem;
-  border: none;
-  border-radius: 12px;
-  font-size: 15px;
+.dropdown {
+  max-width: fit-content;
 }
 
-.background {
-  /* inline-size: 50%; */
+#dropdown-label {
+  cursor: pointer;
+}
+
+#dropdown-options-1 {
+  background-color: #2c2c2c;
+  color: #e0e0e0;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #000000;
-  color: #ffffff;
+  display: none;
+  box-sizing: border-box;
+  transition: border 0.3s ease;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  padding: 10px;
 }
 
-.top {
-  display: flex;
-  justify-content: space-between;
-  background-color: #2f2f2f;
-  padding: 0.6rem 2rem;
-  align-items: center;
+.dropdown-option:hover {
+  cursor: pointer;
+  border: 1px solid #c0c0c0;
+  border-radius: 2px;
 }
 
-.options {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-  font-family: "IBM Plex Mono", monospace;
-  padding: 1rem;
+.dropdown {
+  padding: 10px;
+  border-radius: 5px;
 }
 
-.validity {
-  padding: 0rem 1rem;
-}
-
-.button {
-  position: relative;
-}
-
-.icon {
-  position: absolute;
-  left: 1rem;
-  top: 1rem;
-}
-
-.flex {
-  display: flex;
-  align-items: center;
-}
-
-.gap {
-  gap: 0.5rem;
-}
-
-.green {
-  color: #28f140;
-  /* display: none; */
-}
-
-.blue {
-  color: #1d92ff;
-}
-
-.purple {
-  color: #7916e2;
-}
-
-.red {
-  color: #e31586;
-  /* display: none; */
+.show-dropdown {
+  display: block !important;
 }
