--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,15 @@
   padding: 0;
 }
 
+button {
+  background-color: #4e4e4e;
+  color: #b4b4b4;
+  padding: 0.8rem 2rem;
+  border: none;
+  border-radius: 12px;
+  font-size: 15px;
+}
+
 .dropdown {
   max-width: fit-content;
 }
@@ -41,4 +50,61 @@
 
 .show-dropdown {
   display: block !important;
+}
+
+.background {
+  inline-size: 50%;
+  display: flex;
+  flex-direction: column;
+  background-color: #000000;
+  color: #ffffff;
+  padding-block-end: 1rem;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  background-color: #2f2f2f;
+  padding: 0.6rem 2rem;
+  align-items: center;
+}
+
+.options {
+  display: flex;
+  gap: 1rem;
+  font-family: "IBM Plex Mono", monospace;
+  padding: 1rem;
+}
+
+.button {
+  position: relative;
+}
+
+.icon {
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
+}
+
+.flex{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.green {
+  color: #28f140;
+  /* display: none; */
+}
+
+.blue {
+  color: #1d92ff;
+}
+
+.purple {
+  color: #7916e2;
+}
+
+.red {
+  color: #e31586;
 }
