--- a/styles.css
+++ b/styles.css
@@ -1,110 +1,111 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+ box-sizing: border-box;
+ margin: 0;
+ padding: 0;
 }
 
 button {
-  background-color: #4e4e4e;
-  color: #b4b4b4;
-  padding: 0.8rem 2rem;
-  border: none;
-  border-radius: 12px;
-  font-size: 15px;
+ background-color: #4e4e4e;
+ color: #b4b4b4;
+ padding: 0.8rem 2rem;
+ border: none;
+ border-radius: 12px;
+ font-size: 15px;
 }
 
 .dropdown {
-  max-width: fit-content;
+ max-width: fit-content;
 }
 
-#dropdown-label {
-  cursor: pointer;
+.dropdown-label {
+ cursor: pointer;
 }
 
-#dropdown-options-1 {
-  background-color: #2c2c2c;
-  color: #e0e0e0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  display: none;
-  box-sizing: border-box;
-  transition: border 0.3s ease;
-  margin-bottom: 5px;
-  border-radius: 5px;
-  padding: 10px;
+.dropdown-options {
+ background-color: #2c2c2c;
+ color: #e0e0e0;
+ width: max-content;
+ display: flex;
+ flex-direction: column;
+ display: none;
+ box-sizing: border-box;
+ transition: border 0.3s ease;
+ margin-bottom: 5px;
+ border-radius: 5px;
+ padding: 10px;
+ position: absolute;
 }
 
 .dropdown-option:hover {
-  cursor: pointer;
-  border: 1px solid #c0c0c0;
-  border-radius: 2px;
+ cursor: pointer;
+ border: 1px solid #c0c0c0;
+ border-radius: 2px;
 }
 
 .dropdown {
-  padding: 10px;
-  border-radius: 5px;
+ padding: 10px;
+ border-radius: 5px;
 }
 
 .show-dropdown {
-  display: block !important;
+ display: block !important;
 }
 
 .background {
-  inline-size: 50%;
-  display: flex;
-  flex-direction: column;
-  background-color: #000000;
-  color: #ffffff;
-  padding-block-end: 1rem;
+ inline-size: 50%;
+ display: flex;
+ flex-direction: column;
+ background-color: #000000;
+ color: #ffffff;
+ padding-block-end: 1rem;
 }
 
 .top {
-  display: flex;
-  justify-content: space-between;
-  background-color: #2f2f2f;
-  padding: 0.6rem 2rem;
-  align-items: center;
+ display: flex;
+ justify-content: space-between;
+ background-color: #2f2f2f;
+ padding: 0.6rem 2rem;
+ align-items: center;
 }
 
 .options {
-  display: flex;
-  gap: 1rem;
-  font-family: "IBM Plex Mono", monospace;
-  padding: 1rem;
+ display: flex;
+ gap: 1rem;
+ font-family: "IBM Plex Mono", monospace;
+ padding: 1rem;
 }
 
 .button {
-  position: relative;
+ position: relative;
 }
 
 .icon {
-  position: absolute;
-  left: 1rem;
-  top: 1rem;
+ position: absolute;
+ left: 1rem;
+ top: 1rem;
 }
 
-.flex{
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
+.flex {
+ display: flex;
+ align-items: center;
+ gap: 0.5rem;
 }
 
 .green {
-  color: #28f140;
-  /* display: none; */
+ color: #28f140;
+ /* display: none; */
 }
 
 .blue {
-  color: #1d92ff;
+ color: #1d92ff;
 }
 
 .purple {
-  color: #7916e2;
+ color: #7916e2;
 }
 
 .red {
-  color: #e31586;
+ color: #e31586;
 }
