--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,18 @@
 button {
   background-color: #4e4e4e;
   color: #b4b4b4;
-  padding: 0.8rem 2rem;
+  padding: 0.5rem 1.3rem;
   border: none;
   border-radius: 12px;
   font-size: 15px;
 }
 
-.dropdown {
-  max-width: fit-content;
+.container{
+  inline-size: 100%;
+  block-size: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .dropdown-label {
@@ -45,7 +49,8 @@ button {
 }
 
 .dropdown {
-  padding: 10px;
+  margin: 0rem;
+  padding: 0rem;
   border-radius: 5px;
 }
 
@@ -54,28 +59,28 @@ button {
 }
 
 .background {
-  inline-size: 50%;
+  inline-size: fit-content;
   display: flex;
   flex-direction: column;
   background-color: #000000;
   color: #ffffff;
   padding-block-end: 1rem;
+  border-radius: 0.6rem;
 }
 
 .top {
   display: flex;
-  justify-content: space-between;
   background-color: #2f2f2f;
   padding: 0.6rem 2rem;
-  align-items: center;
+  justify-content: end;
+  border-radius: 0.6rem 0.6rem 0rem 0rem;
 }
 
 .options {
   display: flex;
   align-items: center;
-  gap: 1rem;
   font-family: "IBM Plex Mono", monospace;
-  padding: 1rem;
+  padding: 1rem 3rem 1rem 1rem;
 }
 
 .button {
@@ -84,14 +89,22 @@ button {
 
 .icon {
   position: absolute;
-  left: 1rem;
-  top: 1rem;
+  left: 0.3rem;
+  top: 0.7rem;
 }
 
 .flex {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+.flex-no-gap{
+  display: flex;
+  align-items: center;
+  gap: 0rem;
+  margin: 0rem;
+  padding: 0rem;
 }
 
 .green {
