--- a/sp-files/.sphinx/_static/css/styles.css
+++ b/sp-files/.sphinx/_static/css/styles.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
-* {
+/* * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
+} */
 
 button {
   background-color: #4e4e4e;
@@ -17,7 +17,7 @@ button {
 
 .container{
   inline-size: 100%;
-  block-size: 100vh;
+  /* block-size: 100vh; */
   display: flex;
   align-items: center;
   justify-content: center;
